<resources>
    <string name="app_name">FENDAP Bengkulu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tour_and_guide"><![CDATA[Tour & guide]]></string>
    <string name="title_ruangkito">Ruang kito</string>
    <string name="title_ticket">Ticket</string>
    <string name="title_account">Account</string>
    <string name="wisata"><![CDATA[Wisata alam & buatan]]></string>
    <string name="budaya">Wisata\nbudaya</string>
    <string name="kuliner">Wisata\nkuliner</string>
    <string name="kerajinan">Wisata\nkerajinan</string>
    <string name="penginapan"><![CDATA[Hotel & Penginapan]]></string>
    <string name="soon">Segera\nhadir</string>
    <string name="title_activity_submenu">Selengkapnya</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet. Lorem ipsum dolot sit amet comsectuer. Lorem ipsum dolor sit amet consectuer. Lorem ipsum dolor sit amet consectuer</string>
    <string name="need_login">Anda belum masuk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="login_for">Login terlebih dahulu untuk dapat mengirim komentar dan rating</string>
    <string name="placeholder_enter_email">Masukkan email anda</string>
    <string name="placeholder_enter_password">Masukkan password</string>
    <string name="masuk">Masuk</string>
    <string name="event"><![CDATA[Event & \nperayaan]]></string>
    <string name="title_about">Tentang</string>
    <string name="about_desc"><![CDATA[Aplikasi Festival dan Pariwisata Bengkulu\n  Aplikasi ini dibuat sebagai referensi pemerintah dan publik untuk mempromosikan objek-objek wisata yang ada di daerah-daerah khususnya provinsi Bengkulu sehingga nantinya melalui aplikasi ini diharapkan objek-objek wisata memiliki daya saing dan daya jual tingkat nasional dan internasional dalam menghadapi Revolusi Industri 4.0 khususnya dalam bidang pariwisata.\n\nTujuan dan sasaran  FENDAP Bengkulu.    \nTujuan :  Adapun tujuan dari aplikasi Fendap Bengkulu adalah sebagai salah satu sarana meningkatkan kualitas potensi wisata yang ada di provinsi bengkulu dengan indikator sasaran sebagai berikut :  \n\n1. Meningkatkan jumlah wisatawan lokal maupun macanegara di bengkulu. \n2. Meningkatkan peran masyarakat khususnya pemuda dalam megoptimalisasi pariwisata yang ada di provinsi bengkulu. \n3. Untuk membantu UKM – UKM usaha kerajinan dan oleh-oleh di provinsi bengkulu dalam sektor pemasaran serta penjualan. \n4. Mempromosikan kebudayan serta kearifan lokal yang ada di provinsi Bengkulu.]]></string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="detail_of_image">detail of image</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="gagal_terhubung">Tidak dapat mengambil data dari server. Coba lagi nanti</string>
    <string name="transportasi">Transportasi</string>
    <string name="cari_trans">Cari transportasi untuk bepergian</string>
    <string name="info_pemandu">Info pemandu</string>
    <string name="title_activity_tour_submenu">Daftar</string>
    <string name="hotel">Penginapan</string>
    <string name="festival">Festival &amp; Pariwisata\nBengkulu</string>
</resources>
