<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.smarteist.autoimageslider.SliderLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/slider_banner">
        </com.smarteist.autoimageslider.SliderLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="16dp"
                        android:background="?android:selectableItemBackground"
                        android:id="@+id/card_wisata"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_card_wisata"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_marginTop="8dp"
                            android:textAlignment="center"
                            android:text="@string/wisata"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:padding="16dp"
                        android:background="?android:selectableItemBackground"
                        android:id="@+id/card_budaya"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_card_budaya"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_marginTop="8dp"
                            android:textAlignment="center"
                            android:text="@string/budaya"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:padding="16dp"
                        android:background="?android:selectableItemBackground"
                        android:id="@+id/card_kuliner"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_card_kuliner"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_marginTop="8dp"
                            android:textAlignment="center"
                            android:text="@string/kuliner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="16dp"
                        android:background="?android:selectableItemBackground"
                        android:id="@+id/card_kerajinan"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_card_kerajinan"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_marginTop="8dp"
                            android:textAlignment="center"
                            android:text="@string/kerajinan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:padding="16dp"
                        android:background="?android:selectableItemBackground"
                        android:id="@+id/card_event"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_card_event"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_marginTop="8dp"
                            android:textAlignment="center"
                            android:text="@string/event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>