<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            app:cardCornerRadius="8dp"
            android:layout_margin="4dp"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/ic_tour_pemandu"
                    android:layout_margin="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:scaleType="fitEnd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/info_pemandu"
                        android:textStyle="bold"
                        android:textColor="@color/materialBlack"
                        android:fontFamily="monospace"
                        android:layout_margin="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RelativeLayout
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/accent_rounded"
                        android:layout_width="96dp"
                        android:layout_height="6dp">
                    </RelativeLayout>
                    <Button
                        android:textAllCaps="false"
                        android:id="@+id/tour_pemandu"
                        android:layout_margin="16dp"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:text="Selengkapnya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardCornerRadius="8dp"
            android:elevation="2dp"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/icon_transportasi"
                    android:layout_margin="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:scaleType="fitEnd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/transportasi"
                        android:textStyle="bold"
                        android:textColor="@color/materialBlack"
                        android:fontFamily="monospace"
                        android:layout_margin="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RelativeLayout
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/accent_rounded"
                        android:layout_width="96dp"
                        android:layout_height="6dp">
                    </RelativeLayout>
                    <Button
                        android:textAllCaps="false"
                        android:id="@+id/tour_transportasi"
                        android:layout_margin="16dp"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:text="Selengkapnya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardCornerRadius="8dp"
            android:layout_margin="4dp"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/ic_tour_hotel"
                    android:layout_margin="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:scaleType="fitEnd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/hotel"
                        android:textStyle="bold"
                        android:textColor="@color/materialBlack"
                        android:fontFamily="monospace"
                        android:layout_margin="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RelativeLayout
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/accent_rounded"
                        android:layout_width="96dp"
                        android:layout_height="6dp">
                    </RelativeLayout>
                    <Button
                        android:textAllCaps="false"
                        android:id="@+id/tour_hotel"
                        android:layout_margin="16dp"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:text="Selengkapnya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>